--- a/SpringJPAH2/pom.xml
+++ b/SpringJPAH2/pom.xml
@@ -65,11 +65,11 @@
 		</dependency>
 		
 		<!-- JAX dependencies -->
-		<dependency>
+		<!-- <dependency>
 			    <groupId>javax.xml.bind</groupId>
 			    <artifactId>jaxb-api</artifactId>
 			    <version>2.2.11</version>
-			</dependency>
+			</dependency> -->
 			<dependency>
 		    <groupId>com.sun.xml.bind</groupId>
 		    <artifactId>jaxb-core</artifactId>
@@ -98,6 +98,12 @@
 		    <version>2.8.0</version>
 		    <scope>compile</scope>
 		</dependency>
+		
+		<dependency>
+	        <groupId>javax.xml.bind</groupId>
+	        <artifactId>jaxb-api</artifactId>
+	        <version>2.3.0</version>
+	    </dependency>
 
 		
 	</dependencies>
